objects/Maanager_1__c/Maanager_1__c.object-meta.xml
<CustomObject>
    <description>This object stores the all the Managers that are working in an organization</description>
    <label>Manager 1</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managers 1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>