objects/Maanager_1__c/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <description>Calculates the age of the Manager</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BirthDate</label>
    <type>Date</type>
</CustomField>