objects/Maanager_1__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email ID of Manager</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email</label>
    <type>Email</type>
</CustomField>