objects/Maanager_1__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Delivery Manager for the Project</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Managers 1</relationshipLabel>
    <relationshipName>Managers_1</relationshipName>
    <type>Lookup</type>
</CustomField>