objects/Maanager_1__c/fields/Work_Location_1__c.field-meta.xml
<CustomField>
    <fullName>Work_Location_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the Location of the Manager</description>
    <label>Work Location</label>
    <referenceTo>Work_Location__c</referenceTo>
    <relationshipLabel>Managers 1</relationshipLabel>
    <relationshipName>Managers_1</relationshipName>
    <type>Lookup</type>
</CustomField>